--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,19 @@
 /* custom props */
 :root {
   /* palette */
+  --viewport-top-bg: #009688;
+  --viewport-bottom-bg: #dbdbd2;
   --header-bg: #eaeaea;
   --icon-color: #b1b1b1;
   --notifacation-bg: #8edafc;
   --notification-icon-bg: #f2fbff;
   --chats-section-bg: #fafafa;
+  --chat-hover-bg: #e9ebeb;
+  --text-secondary: #c5c2c3;
+  --active-comands-bg: #f3eeea;
+  --active-comands-icon: #656e73;
+  --reiceved-msg-bg: #ffffff;
+  --sent-msg-bg: #d5f9ba;
 }
 
 /* ! generics */
@@ -45,7 +53,11 @@ i {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: antiquewhite;
+  background: linear-gradient(
+    to bottom,
+    var(--viewport-top-bg) 20%,
+    var(--viewport-bottom-bg) 20%
+  );
 }
 
 /* ! app */
@@ -54,28 +66,34 @@ i {
   width: 1600px;
   display: flex;
   overflow: hidden;
-
-  /* debug */
-  background-color: aqua;
 }
 
 #app .app-chats {
   width: 35%;
 }
 
+#app .app-active {
+  flex-grow: 1;
+}
+
 /* ! chats-section */
 
 /* ? header */
-.chats-header {
+.chats-header,
+.active-chat-header {
   padding: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-right: 1px solid #d6d6d6;
   background-color: var(--header-bg);
 }
 
-.chats-header i {
+.chats-header {
+  border-right: 1px solid #d6d6d6;
+}
+
+.chats-header i,
+.active-chat-header i {
   font-size: 1.5rem;
   color: var(--icon-color);
 }
@@ -122,4 +140,104 @@ i {
   overflow: auto;
   height: 80%;
   background-color: var(--chats-section-bg);
+}
+
+/* ? chats */
+#app .chat {
+  padding: 0.8rem 1.5rem;
+  display: flex;
+  cursor: pointer;
+  border-bottom: 1px solid #d6d6d6;
+}
+
+#app .chat:hover {
+  background-color: var(--chat-hover-bg);
+}
+
+#app .chat .img-rounded {
+  height: 70px;
+}
+
+.chat-text .chat-name,
+.chat-text .chat-preview,
+.chat-title,
+.chat-access {
+  margin-bottom: 0;
+}
+
+.chat-preview,
+.chat-time {
+  color: var(--text-secondary);
+  font-weight: bold;
+}
+
+/* ! active chat section */
+.active-chat-header {
+  height: 82px;
+  width: 100%;
+}
+
+.active-chat-header .chat-title {
+  color: black;
+}
+
+.active-chat {
+  height: calc(100% - 82px - 80px);
+  padding: 2rem 4rem;
+  display: flex;
+  flex-direction: column;
+  background-image: url(../img/mine.jpg);
+  overflow: scroll;
+}
+
+.active-chat .message-sent,
+.active-chat .message-reiceved {
+  min-width: 300px;
+  max-width: 500px;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 10px;
+  color: #222;
+}
+
+.active-chat .message-sent {
+  align-self: flex-end;
+  background-color: var(--sent-msg-bg);
+}
+
+.active-chat .message-reiceved {
+  align-items: flex-start;
+  background-color: var(--reiceved-msg-bg);
+}
+
+.message-txt {
+  padding: 1rem;
+}
+
+.message-time {
+  padding: 0.5rem;
+  align-self: flex-end;
+  font-size: 0.7rem;
+  color: var(--active-comands-icon);
+}
+
+.active-comands {
+  padding: 10px 3rem;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  background-color: var(--active-comands-bg);
+}
+
+#app .active-comands .message-input {
+  padding: 1rem;
+  flex-grow: 1;
+  margin: 0 3rem;
+  border: 0;
+  border-radius: 10px;
+}
+
+.active-comands i {
+  font-size: 1.7rem;
+  color: var(--active-comands-icon);
 }
