--- a/style/style.css
+++ b/style/style.css
@@ -40,6 +40,7 @@ i {
 .img-rounded img {
   object-fit: cover;
   width: 100%;
+  height: 100%;
 }
 
 #app figure {
@@ -48,6 +49,7 @@ i {
 
 /* ! viewport */
 .viewport {
+  position: relative;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -141,6 +143,29 @@ i {
   height: calc(100% - 82px - 92px - 55px);
   overflow: auto;
   background-color: var(--chats-section-bg);
+}
+
+.create-contact {
+  padding: 1rem;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+}
+
+.create-contact .create-contact-close {
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  align-self: flex-end;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: white;
+  border-radius: 10px;
+  background-color: rgb(171, 35, 35);
+  text-align: center;
+  cursor: pointer;
+}
+
+.create-contact .btn {
+  font-weight: bold;
 }
 
 /* ? chats */
